<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#753a88"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3CB371"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:onClick="increment"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/quantity_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/_0"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:onClick="decrement"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#3CB371"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:text="@string/prices"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/_0"
            android:padding="4dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/order"
            android:onClick="order"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>